--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="assets/css/style.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
-
-    <script src="assets/js/scripts.min.js"></script>
+    <div class="container">
+        <div class="container__row">
+            <div class="container__col">Filters</div>
+            <div class="container__col" id="data"></div>
+        </div>
+    </div>
+    <script src="assets/js/scripts.js"></script>
 </body>
 
 </html>
