--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="container__row">
             <div class="container__col">Filters</div>
-            <div class="container__col" id="data"></div>
+            <div class="container__col" id="data">Data:</div>
         </div>
     </div>
     <script src="assets/js/scripts.js"></script>
