--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <div class="container">
         <div class="container__row">
             <div class="container__col">Filters</div>
-            <div class="container__col" id="data">Data:</div>
+            <div class="container__col">Data:
+                <ol class="container__list" id="data"></ol>
+            </div>
         </div>
     </div>
     <script src="assets/js/scripts.js"></script>
