--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
 <body>
     <div class="container">
         <div class="container__row">
-            <div class="container__col">Filters</div>
+            <div class="container__col">Filters
+                <input class="container__input" id="filterCountry" placeholder="Filter Countries">
+                <input class="container__input" id="filterIndustry" placeholder="Filter Industries">
+            </div>
             <div class="container__col">Data:
                 <ol class="container__list" id="data"></ol>
             </div>
         </div>
     </div>
     <script src="assets/js/scripts.js"></script>
+    <script src="assets/js/filter.js"></script>
 </body>
 
 </html>
