Add sorting and switched from list to table

--- a/index.html
+++ b/index.html
@@ -26,12 +26,19 @@
                     <button class="container_sort" id="sortEmpDesc">Desc</button>
                 </div>
             </div>
-            <div class="container__col">Data:
-                <ol class="container__list" id="data"></ol>
+            <div class="container__col">
+                <table class="container__list" id="data">
+                    <tr class="container__table-row">
+                        <th class="container__table-heading">Name</th>
+                        <th class="container__table-heading">Country</th>
+                        <th class="container__table-heading">Industry</th>
+                        <th class="container__table-heading">No. of Employees</th>
+                    </tr>
+                </table>
             </div>
         </div>
     </div>
-    <script src="assets/js/scripts.js"></script>
+    <script src="assets/js/data.js"></script>
     <script src="assets/js/filter.js"></script>
     <script src="assets/js/sort.js"></script>
 </body>
