Add button styling

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
                 </div>
                 <div class="sort">
                     <div class="sort__group">Sort by Name
-                        <button class="sort__btn" id="sortNameAsc">Asc</button>
-                        <button class="sort__btn" id="sortNameDesc">Desc</button>
+                        <span class="sort__btn sort__btn--one" id="sortNameAsc">Asc</span>
+                        <span class="sort__btn sort__btn--two" id="sortNameDesc">Desc</span>
                     </div>
                     <div class="sort__group">Sort by No. of Employees
-                        <button class="sort__btn" id="sortEmpAsc">Asc</button>
-                        <button class="sort__btn" id="sortEmpDesc">Desc</button>
+                        <span class="sort__btn sort__btn--one" id="sortEmpAsc">Asc</span>
+                        <span class="sort__btn sort__btn--two" id="sortEmpDesc">Desc</span>
                     </div>
                 </div>
             </div>
@@ -35,7 +35,7 @@
                             <th class="list__heading">Name</th>
                             <th class="list__heading">Country</th>
                             <th class="list__heading">Industry</th>
-                            <th class="list__heading">No. of Employees</th>
+                            <th class="list__heading">No. of<br>Employees</th>
                         </tr>
                     </tbody>
                 </table>
