--- a/index.html
+++ b/index.html
@@ -13,16 +13,19 @@
     <div class="container">
         <div class="container__row">
             <div class="container__col">
-                <div class="filter">Filters
-                    <input class="filter__input" id="filterCountry" placeholder="Filter Countries">
-                    <input class="filter__input" id="filterIndustry" placeholder="Filter Industries">
-                </div>
                 <div class="sort">
-                    <div class="sort__group">Sort by Name
+                    <div class="sort__group">
+                        <h2 class="sort__heading">Filters</h2>
+                        <input class="sort__input" id="filterCountry" placeholder="Filter Countries">
+                        <input class="sort__input" id="filterIndustry" placeholder="Filter Industries">
+                    </div>
+                    <div class="sort__group">
+                        <h2 class="sort__heading">Sort by Name</h2>
                         <span class="sort__btn sort__btn--one" id="sortNameAsc">Asc</span>
                         <span class="sort__btn sort__btn--two" id="sortNameDesc">Desc</span>
                     </div>
-                    <div class="sort__group">Sort by No. of Employees
+                    <div class="sort__group">
+                        <h2 class="sort__heading">Sort by No. of Employees</h2>
                         <span class="sort__btn sort__btn--one" id="sortEmpAsc">Asc</span>
                         <span class="sort__btn sort__btn--two" id="sortEmpDesc">Desc</span>
                     </div>
