--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Filtering and Sorting of Data</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.min.css">
 </head>
 
 <body>
@@ -45,9 +45,9 @@
             </div>
         </div>
     </div>
-    <script src="assets/js/data.js"></script>
-    <script src="assets/js/filter.js"></script>
-    <script src="assets/js/sort.js"></script>
+    <script src="assets/js/data.min.js"></script>
+    <script src="assets/js/filter.min.js"></script>
+    <script src="assets/js/sort.min.js"></script>
 </body>
 
 </html>
