--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
             </div>
         </div>
     </div>
-    <script src="assets/js/data.min.js"></script>
-    <script src="assets/js/filter.min.js"></script>
-    <script src="assets/js/sort.min.js"></script>
+    <script src="assets/js/scripts.min.js"></script>
 </body>
 
 </html>
