Add alternative sorting script

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
                         <span class="sort__btn sort__btn--one" id="sortEmpAsc">Asc</span>
                         <span class="sort__btn sort__btn--two" id="sortEmpDesc">Desc</span>
                     </div>
+                    <div class="sort__group">
+                        <h2 class="sort__heading">Sort</h2>
+                        <span class="sort__btn sort__btn--one" id="sortName">Name</span>
+                        <span class="sort__btn sort__btn--two" id="sortEmp">No. of Employees</span>
+                    </div>
                 </div>
             </div>
             <div class="container__col">
@@ -38,7 +43,7 @@
                             <th class="list__heading">Name</th>
                             <th class="list__heading">Country</th>
                             <th class="list__heading">Industry</th>
-                            <th class="list__heading">No. of<br>Employees</th>
+                            <th class="list__heading">No. of Employees</th>
                         </tr>
                     </tbody>
                 </table>
