--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <div class="sort__group">
                         <h2 class="sort__heading">Sort</h2>
                         <span class="sort__btn sort__btn--one" id="sortName">Name</span>
-                        <span class="sort__btn sort__btn--two" id="sortEmp">No. of Employees</span>
+                        <span class="sort__btn sort__btn--two" id="sortEmp">Number of Employees</span>
                     </div>
                 </div>
             </div>
@@ -33,7 +33,7 @@
                             <th class="list__heading">Name</th>
                             <th class="list__heading">Country</th>
                             <th class="list__heading">Industry</th>
-                            <th class="list__heading">No. of Employees</th>
+                            <th class="list__heading">Number of Employees</th>
                         </tr>
                     </tbody>
                 </table>
